# Portable-Brain

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
scripts/: __init__.py
scripts/db/: __init__.py  create_tables.py  delete_tables.py  reset_all.py
src/: __init__.py
src/portable_brain/: app.py
src/portable_brain/agent_service/common/system_prompts/: device_execution_prompts.py  memory_retrieval_prompts.py
src/portable_brain/agent_service/core_agent/: main_orchestrator.py  tool_calling_agent.py
src/portable_brain/agent_service/execution_agent/: agent.py
src/portable_brain/agent_service/orchestrator/: main_orchestrator.py
src/portable_brain/agent_service/retrieval_agent/: agent.py
src/portable_brain/api/request_models/: tests.py
src/portable_brain/api/routes/: monitoring_background_tasks.py  test_route.py
src/portable_brain/common/db/: session.py
src/portable_brain/common/logging/: logger.py
src/portable_brain/common/types/: android_apps.py
src/portable_brain/config/: app_config.py  config.py  settings_mixins.py
src/portable_brain/core/: dependencies.py  lifespan.py
src/portable_brain/memory/: main_retriever.py
src/portable_brain/middleware/: logging_middleware.py
src/portable_brain/monitoring/: observation_repository.py
src/portable_brain/monitoring/background_tasks/: __init__.py  observation_tracker.py
src/portable_brain/monitoring/embedding_manager/: __init__.py  embedding_repository.py
src/portable_brain/monitoring/fixtures/: state_snapshot_scenarios.py
tests/: gemini_embedding_test.py  nova_client_test.py
(+48 files in other folders)
