[project]
name = "portable-brain"
version = "0.1.0"
description = "second brain that learns from HCI data from smartphone usage"
authors = [
    {name = "Sungmin Kim",email = "sk3378@princeton.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "path (>=17.1.1,<18.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)"
]

[tool.poetry]
packages = [{include = "portable_brain", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
